--- a/templates/darkknight/index.html
+++ b/templates/darkknight/index.html
@@ -46,7 +46,7 @@
             padding: 0;
         }
         .address {
-            color: #888888;
+            color: #aaaaaa;
         }
     </style>
 </head>
